feat: 添加AI助手功能

--- a/ai-chat/.env.example
+++ b/ai-chat/.env.example
@@ -1,2 +1,4 @@
 # DeepSeek API 配置
-DEEPSEEK_API_KEY=your_api_key_here 
+# 将此文件复制为 .env.local（开发环境）或 .env.production（生产环境）
+# 并替换为你的实际 API 密钥
+DEEPSEEK_API_KEY=your-api-key-here 
