--- a/ai-chat/.gitignore
+++ b/ai-chat/.gitignore
@@ -1,28 +1,24 @@
-# 依赖
-node_modules
-.DS_Store
-
-# 构建输出
-dist
-dist-ssr
-
-# 本地环境文件
-.env
-.env.local
-.env.*.local
-
-# 日志
+# Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# 编辑器目录和文件
-.idea
+node_modules
+dist
+dist-ssr
+*.local
+.env.local
+.env.production
+
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+.idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
