fix: 移除API密钥，添加环境变量示例和安全指南

--- a/ai-chat/.env.example
+++ b/ai-chat/.env.example
@@ -1,4 +1,11 @@
 # DeepSeek API 配置
 # 将此文件复制为 .env.local（开发环境）或 .env.production（生产环境）
 # 并替换为你的实际 API 密钥
-DEEPSEEK_API_KEY=your-api-key-here 
+DEEPSEEK_API_KEY=your-api-key-here
+
+# DeepSeek API 配置示例
+# 复制此文件为 .env.local 并添加你的API密钥
+VITE_DEEPSEEK_API_KEY=your-api-key-here
+
+# 如果没有有效的API密钥，应用将自动使用模拟模式
+# 获取API密钥: https://platform.deepseek.com 
